--- a/app/src/main/res/layout/activity_wake_up_request.xml
+++ b/app/src/main/res/layout/activity_wake_up_request.xml
@@ -16,7 +16,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorPrimary"
+    android:background="@color/color_amber"
     tools:context="co.com.acktos.ubimoviltaxista.presentation.WakeUpRequestActivity">
 
 
@@ -28,12 +28,21 @@
         android:layout_above="@+id/img_car_wakeup"/>-->
 
     <ImageView
+        android:id="@+id/img_logo"
+        android:layout_width="180dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/logo_ubimovil_white"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/img_car_wakeup"/>
+
+    <ImageView
         android:id="@+id/img_car_wakeup"
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:tint="@color/white"
         android:layout_marginTop="16dp"
-        android:src="@drawable/taxi_icon"
+        android:src="@drawable/ic_local_taxi_200dp"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/progress_wakeup"/>
 
@@ -48,12 +57,13 @@
         app:mpb_progressStyle="horizontal"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:tint="@color/white"
+        android:tint="@color/colorPrimaryText"
         style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal" />
 
     <android.support.v7.widget.GridLayout
 
-        android:layout_width="250dp"
+        android:id="@+id/content_distance"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -67,10 +77,10 @@
 
     <!-- ROW 2 -->
     <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:tint="@color/colorPrimaryText"
-        android:src="@drawable/ic_schedule_24dp"
+        android:src="@drawable/ic_navigation_24dp"
         android:layout_marginEnd="5dp"
         android:layout_marginRight="5dp"
         app:layout_column="0"
@@ -79,10 +89,10 @@
 
     <TextView
         android:text="Distance"
-        android:textColor="@color/colorSemiWhite"
+        android:textColor="@color/colorPrimaryText"
         app:layout_column="1"
         app:layout_row="0"
-        android:textSize="16sp"
+        android:textSize="18sp"
         app:layout_columnWeight="1"/>
 
 
@@ -90,8 +100,8 @@
         android:id="@+id/lbl_distance"
         android:text="300 Meters"
         android:textStyle="bold"
-        android:textSize="16sp"
-        android:textColor="@color/colorSemiWhite"
+        android:textSize="18sp"
+        android:textColor="@color/colorSecondaryText"
         android:gravity="end"
         app:layout_column="2"
         app:layout_row="0"
@@ -100,13 +110,32 @@
     </android.support.v7.widget.GridLayout>
 
 
-    <Button
-        android:id="@+id/btn_accept_service"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:theme="@style/WhiteButton"
-        android:layout_height="60dp"
-        android:text="@string/accept"
-        android:layout_alignParentBottom="true"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_below="@+id/content_distance"
+        android:weightSum="5">
+
+        <Button
+            android:id="@+id/btn_accept_service"
+            android:layout_width="match_parent"
+            android:theme="@style/GreenButton"
+            android:layout_height="60dp"
+            android:text="@string/accept"
+            android:layout_weight="2" />
+
+        <Button
+            android:id="@+id/btn_cancel_service"
+            android:layout_width="match_parent"
+            android:theme="@style/RedButton"
+            android:layout_height="60dp"
+            android:text="@string/cancel"
+            android:layout_weight="3"/>
+
+    </LinearLayout>
+
+
 
 </RelativeLayout>
 
