--- a/app/src/main/res/layout/service_item.xml
+++ b/app/src/main/res/layout/service_item.xml
@@ -5,10 +5,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context=".presentation.MainActivity">
 
@@ -19,7 +15,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:orientation="horizontal"
-        android:background="@color/color_3rd_text"
+
         android:weightSum="2">
 
         <TextView
@@ -27,18 +23,17 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:id="@+id/lbl_service_state"
-            android:text="DRIVER ON THE WAY"
+            android:text="Driver on the way"
             android:textSize="12sp"
             android:textStyle="bold"
-            android:textAllCaps="true"
-            android:textColor="@color/white"/>
+            android:textColor="@color/colorSecondaryText"/>
 
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:id="@+id/lbl_service_id"
-            android:text="#2544"
+            android:text="ID: 2544"
             android:textSize="12sp"
             android:textAllCaps="true"
             android:gravity="end"
@@ -46,128 +41,279 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.GridLayout
-
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        app:columnCount="7"
-        app:orientation="horizontal"
-        app:rowCount="7"
-        android:background="@color/color_3rd_text">
+        android:orientation="horizontal"
+        android:weightSum="12">
 
-        <!-- ROW 2 -->
         <ImageView
-            android:layout_width="17dp"
-            android:layout_height="17dp"
-            android:tint="@color/white"
+            android:layout_weight="2"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:tint="@color/colorPrimaryText"
+            android:src="@drawable/ic_customer_24dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="10"
+            android:layout_height="wrap_content"
+            android:id="@+id/lbl_user"
+            android:text="Sebastian Calderon"
+            android:textStyle="bold"
+            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryText"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="horizontal"
+        android:weightSum="12">
+
+        <ImageView
+            android:layout_weight="2"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:tint="@color/colorPrimaryText"
             android:src="@drawable/ic_schedule_24dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            app:layout_column="0"
-            app:layout_row="0"
-            app:layout_columnWeight="1"/>
+            android:layout_marginRight="5dp" />
 
         <TextView
             android:text="Time"
-            android:textColor="@color/colorSecondaryTextLight"
+            android:layout_weight="4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimaryText"
+            android:textStyle="bold"
             app:layout_column="1"
             app:layout_row="0"
-            android:textSize="12sp"
+            android:textSize="14sp"
             app:layout_columnWeight="1"/>
 
-
         <TextView
+            android:layout_width="0dp"
+            android:layout_weight="6"
+            android:layout_height="wrap_content"
             android:id="@+id/lbl_time"
-            android:text="2016/02/25 - 18:00"
-            android:textStyle="bold"
-            android:textSize="12sp"
-            android:textColor="@color/white"
+            android:text="30/02/16 11:20"
             android:gravity="end"
-            app:layout_column="2"
-            app:layout_row="0"
-            app:layout_columnWeight="5"/>
+            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryText"/>
 
-        <Space
-            app:layout_row="1"
-            app:layout_column="0"
-            android:layout_width="5dp"
-            android:layout_height="10dp"
-            app:layout_columnSpan="7"/>
+    </LinearLayout>
 
-        <!-- ROW 2 -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="horizontal"
+        android:weightSum="12">
+
         <ImageView
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:tint="@color/colorPrimary"
+            android:layout_weight="2"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:tint="@color/colorPrimaryText"
             android:src="@drawable/ic_place_24dp"
             android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            app:layout_column="0"
-            app:layout_row="2"
-            app:layout_columnWeight="1"/>
+            android:layout_marginRight="5dp" />
 
         <TextView
-            android:text="Pick Up"
-            android:textColor="@color/colorSecondaryTextLight"
+            android:text="Pick up"
+            android:layout_weight="4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimaryText"
+            android:textStyle="bold"
             app:layout_column="1"
-            app:layout_row="2"
-            android:textSize="12sp"
+            app:layout_row="0"
+            android:textSize="14sp"
             app:layout_columnWeight="1"/>
 
         <TextView
+            android:layout_width="0dp"
+            android:layout_weight="6"
+            android:layout_height="wrap_content"
             android:id="@+id/lbl_pickup"
-            android:text="Calle 8a # 79-17 casa 13 castilla"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
+            android:text="Carrera 32 B # 11 - 46"
             android:gravity="end"
-            app:layout_column="2"
-            app:layout_row="2"
-            app:layout_columnWeight="7"/>
+            android:textSize="14sp"
+            android:textColor="@color/colorPrimaryText"/>
 
-        <Space
-            app:layout_row="3"
-            app:layout_column="0"
-            android:layout_width="5dp"
-            android:layout_height="10dp"
-            app:layout_columnSpan="7"/>
-
-        <!-- ROW 2 -->
+    </LinearLayout>
 
 
-        <ImageView
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:tint="@color/white"
-            android:src="@drawable/ic_customer_24dp"
-            app:layout_column="0"
-            app:layout_row="4"
-            app:layout_columnWeight="1"/>
-        <TextView
-            android:text="Customer"
-            android:textColor="@color/colorSecondaryTextLight"
-            android:textSize="12sp"
-            app:layout_column="1"
-            app:layout_row="4"
-            app:layout_columnWeight="1"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryLight">
 
-        <TextView
-            android:id="@+id/lbl_user"
-            android:text="Eliana Carreño"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:gravity="end"
-            app:layout_column="2"
-            app:layout_row="4"
-            app:layout_columnWeight="7"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:orientation="horizontal"
+
+            android:weightSum="2">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:id="@+id/lbl_service_state"
+                android:text="Driver on the way"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorSecondaryText"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:id="@+id/lbl_service_id"
+                android:text="ID: 2544"
+                android:textSize="12sp"
+                android:textAllCaps="true"
+                android:gravity="end"
+                android:textColor="@color/colorSecondaryTextLight"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:orientation="horizontal"
+            android:weightSum="12">
+
+            <ImageView
+                android:layout_weight="2"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:tint="@color/colorPrimaryText"
+                android:src="@drawable/ic_customer_24dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="10"
+                android:layout_height="wrap_content"
+                android:id="@+id/lbl_user"
+                android:text="Sebastian Calderon"
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:textColor="@color/colorPrimaryText"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:orientation="horizontal"
+            android:weightSum="12">
+
+            <ImageView
+                android:layout_weight="2"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:tint="@color/colorPrimaryText"
+                android:src="@drawable/ic_schedule_24dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp" />
+
+            <TextView
+                android:text="Time"
+                android:layout_weight="4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryText"
+                android:textStyle="bold"
+                app:layout_column="1"
+                app:layout_row="0"
+                android:textSize="14sp"
+                app:layout_columnWeight="1"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="6"
+                android:layout_height="wrap_content"
+                android:id="@+id/lbl_time"
+                android:text="30/02/16 11:20"
+                android:gravity="end"
+                android:textSize="14sp"
+                android:textColor="@color/colorPrimaryText"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:orientation="horizontal"
+            android:weightSum="12">
+
+            <ImageView
+                android:layout_weight="2"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:tint="@color/colorPrimaryText"
+                android:src="@drawable/ic_place_24dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp" />
+
+            <TextView
+                android:text="Pick up"
+                android:layout_weight="4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorPrimaryText"
+                android:textStyle="bold"
+                app:layout_column="1"
+                app:layout_row="0"
+                android:textSize="14sp"
+                app:layout_columnWeight="1"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="6"
+                android:layout_height="wrap_content"
+                android:id="@+id/lbl_pickup"
+                android:text="Carrera 32 B # 11 - 46"
+                android:gravity="end"
+                android:textSize="14sp"
+                android:textColor="@color/colorPrimaryText"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 
-    </android.support.v7.widget.GridLayout>
+
+
+
+
 </LinearLayout>
