--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,8 +28,8 @@
     <style name="MainButton" parent="Theme.AppCompat.Light">
 
         <item name="android:textColor">@color/white</item>
-        <item name="colorControlHighlight">@color/colorPrimaryDark</item>
-        <item name="colorButtonNormal">@color/colorPrimary</item>
+        <item name="colorControlHighlight">@color/colorSecondaryText</item>
+        <item name="colorButtonNormal">@color/colorAccent</item>
     </style>
 
 
@@ -38,6 +38,20 @@
         <item name="android:textColor">@color/white</item>
         <item name="colorControlHighlight">@color/colorSecondaryText</item>
         <item name="colorButtonNormal">@color/colorPrimaryText</item>
+    </style>
+
+    <style name="RedButton" parent="Theme.AppCompat.Light">
+
+        <item name="android:textColor">@color/white</item>
+        <item name="colorControlHighlight">@color/colorSecondaryText</item>
+        <item name="colorButtonNormal">@color/color_red_material</item>
+    </style>
+
+    <style name="GreenButton" parent="Theme.AppCompat.Light">
+
+        <item name="android:textColor">@color/white</item>
+        <item name="colorControlHighlight">@color/colorSecondaryText</item>
+        <item name="colorButtonNormal">@color/color_material_green</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
